--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "gatsby": "^2.18.4",
+    "gatsby-cli": "^2.8.19",
     "gatsby-plugin-emotion": "^4.1.18",
     "gatsby-plugin-manifest": "^2.2.33",
     "gatsby-plugin-offline": "^3.0.29",
